--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,3 +44,7 @@ jobs:
       - name: Lint
         run: |
           npm run lint
+          
+      - name: Deploy
+        run: |
+          npm run deploy
