--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
           
     - name: Build
       run: |
-          npm run build -- --prod
+          ng build --configuration production
           
     - name: Deploy
       run: |
