--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,7 +35,14 @@ jobs:
     - name: Build
       run: |
         npm run build
-          
+    
+    - name: Conventional Changelog Action
+      id: changelog
+      uses: TriPSs/conventional-changelog-action@v3
+      with:
+        github-token: ${{ secrets.TOKEN_GITHUB_ACTION }}
+        output-file: "false"
+    
     - name: Deploy
       run: |
           npm run deploy
