--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,7 +40,7 @@ jobs:
       id: changelog
       uses: TriPSs/conventional-changelog-action@v3
       with:
-        github-token: ${{ secrets.TOKEN_GITHUB_ACTION }}
+        GITHUB_TOKEN: ${{ github.token }}
         output-file: "false"
         
     - name: Create a Release
