--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,4 +46,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
           branches: gh-pages
-          folder: ./dist
+          #folder: ./dist
