--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build --configuration production --base-href=./",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "deploy": "ng deploy --base-href=/TWWeather/ --no-silent"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
